--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <input id="number" type="text">
     <button id="btn">Guess</button>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js" integrity="sha256-HutwTOHexZPk7phZTEa350wtMYt10g21BKrAlsStcvw=" crossorigin="anonymous"></script>
 </body>
 </html>
